<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>
        4.0.0
    </modelVersion>

    <groupId>
        org.pankratzlab
    </groupId>
    <artifactId>
        GeneInfoReader
    </artifactId>
    <version>
        1.0-SNAPSHOT
    </version>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>
                com.github.samtools
            </groupId>
            <artifactId>
                htsjdk
            </artifactId>
            <version>
                3.0.4
            </version>
        </dependency>
        <dependency>
            <groupId>
                org.pankratzlab
            </groupId>
            <artifactId>
                PLab-common
            </artifactId>
            <version>
                0.0.4-SNAPSHOT
            </version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>
            11
        </maven.compiler.source>
        <maven.compiler.target>
            11
        </maven.compiler.target>
        <project.build.sourceEncoding>
            UTF-8
        </project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <finalName>${project.artifactId}</finalName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>org.pankratzlab.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>